--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script type="module" src="/src/main.jsx"></script>
 
   <!-- Start Single Page Apps for GitHub Pages -->
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
     // Single Page Apps for GitHub Pages
     // MIT License
     // https://github.com/rafgraph/spa-github-pages
@@ -34,7 +34,7 @@
         );
       }
     }(window.location))
-  </script>
+  </script> -->
   <!-- End Single Page Apps for GitHub Pages -->
 </body>
 
